поправил маршрут для сваггера, обновил README
