# docs/swagger.json
@@ -9,51 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/api/admin//coefficient/update": {
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "admin"
-                ],
-                "summary": "Обновить соэффициент",
-                "parameters": [
-                    {
-                        "description": "Список коэффициентов",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.CoefficientPEOAdmin"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "400": {
-                        "description": "ошибка парсинга JSON",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/admin/all_templates": {
             "get": {
                 "produces": [
@@ -99,6 +54,51 @@
                             "items": {
                                 "$ref": "#/definitions/storage.CoefficientPEOAdmin"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/coefficient/update": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Обновить соэффициент",
+                "parameters": [
+                    {
+                        "description": "Список коэффициентов",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/storage.CoefficientPEOAdmin"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "ошибка парсинга JSON",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
